@@ -1,3 +1,9 @@
+2012-12-04  Eugenio M. Vigo  <emvigo@gmail.com>
+
+	* src/main.cpp (update_mounted): Moved code common to
+	sico_right_button_activated and sico_activated into a new
+	function.
+
 2012-11-26  Eugenio M. Vigo  <emvigo@gmail.com>
 
 	*  Forked from <https://github.com/tomm/cryptkeeper>
